# clock_in_system

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake/: ASFindCeres.cmake  ASFindLibsGUI.cmake  ASFindOpenCV.cmake  ASFindSuitesparse.cmake  ASFindgflags.cmake  ASFindglog.cmake  ASModule.cmake
modules/camera/: CMakeLists.txt
modules/camera/include/as/: camera.hpp
modules/camera/src/: camera.cpp
modules/core/: CMakeLists.txt
modules/core/include/as/: ASContext.hpp  BaseBoardCore.hpp  CADCore.hpp  CommonCore.hpp  CoorTrans.hpp  ErrorCode.hpp  MarkCore.hpp  PadCore.hpp  core.hpp
modules/core/include/as/core/: detectdef.hpp  ngdef.hpp
modules/core/src/: ASContext.cpp  BaseBoardCore.cpp  CADCore.cpp  CommonCore.cpp  CoorTrans.cpp  MarkCore.cpp  PadCore.cpp
modules/data/: CMakeLists.txt
modules/database/: CMakeLists.txt
modules/database/include/as/: DBUtils.hpp  UserDao.hpp  UserImpl.hpp
modules/database/src/: DBUtils.cpp  UserImpl.cpp
modules/database/src/db/: UserdataDB.db
modules/gui/: CMakeLists.txt
modules/gui/include/as/: gui.hpp
modules/gui/src/: gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
modules/gui/src/module/common/: CommonPart.cpp  CommonPart.h  CustomDataStreamOperators.h  OperationCheckDialog.cpp  OperationCheckDialog.h  OperationCheckDialog.ui
modules/gui/src/module/edit/: ApproveLeaveDialog.cpp  ApproveLeaveDialog.h  ApproveLeaveDialog.ui  HomePageDialog.cpp  HomePageDialog.h  HomePageDialog.ui  LoadDialog.cpp  LoadDialog.h  LoadDialog.ui  LoadDialog.ui.autosave  SubmitDialog.cpp  SubmitDialog.h  SubmitDialog.ui  TakeLeaveDialog.cpp  TakeLeaveDialog.h  TakeLeaveDialog.ui
modules/gui/src/module/manufacture/: ManufactureDialog.cpp  ManufactureDialog.h  ManufactureDialog.ui  ManufactureWidgetLeft.cpp  ManufactureWidgetLeft.h  ManufactureWidgetLeft.ui  ManufactureWidgetRight.cpp  ManufactureWidgetRight.h  ManufactureWidgetRight.ui  NGStatsWidgetLeft.cpp  NGStatsWidgetLeft.h  NGStatsWidgetLeft.ui  NGStatsWidgetRight.cpp  NGStatsWidgetRight.h  NGStatsWidgetRight.ui
modules/gui/src/module/server/: TcpServerDialog.cpp  TcpServerDialog.h
modules/hardware/: CMakeLists.txt
modules/hardware/include/as/: hardware.hpp
modules/hardware/src/: hardware.cpp
modules/imgproc/: CMakeLists.txt
modules/imgproc/include/as/: imgproc.hpp
modules/imgproc/src/: imgproc.cpp
modules/io/include/as/: io.hpp
modules/io/src/: io.cpp
modules/optimization/: CMakeLists.txt
modules/optimization/include/as/: optimization.hpp
modules/optimization/src/: optimization.cpp
modules/process/: CMakeLists.txt
modules/process/include/as/common/: CommonProcess.h  DB_MGR.hpp
modules/process/include/as/edit/: LoadDialogProcess.hpp
modules/process/src/common/: CommonProcess.cpp  DB_MGR.cpp
modules/process/src/edit/: BenchmarkProcess.cpp  LoadDialogProcess.cpp
